--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@
     
 }
 
+a{
+    text-decoration: none;
+}
+
 h2,h3{
     text-align: center;   
+    margin-bottom: 2%;
 }
 
 h5{
@@ -92,7 +97,7 @@ body nav{
     justify-content: space-evenly;
     margin: auto;
     margin-top: 3%;
-    
+    transition: 1;
 }
 
 /* Copy to media for responsive padding */
@@ -102,24 +107,15 @@ nav h2{
     padding: 2px 10px;
     background-color: #7e83d0;
     border-radius: 33px;
-
     -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
     box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
 }
 
 
-nav{
-    width: 90%;
-    transition: 1;
-}
-
 nav h2:hover{
     transform: scale(1.2);
 }
 
-a{
-    text-decoration: none;
-}
 
 body .content-box_about-me{
     width: 60%;
