--- a/style.css
+++ b/style.css
@@ -2,25 +2,25 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: aliceblue;
     font-family: 'Playfair Display', serif;
     letter-spacing: .1rem;
-    text-shadow: 2px 2px 10px blue;
-    
 }
 
 a{
     text-decoration: none;
+    color: aliceblue;
 }
 
 h2,h3{
     text-align: center;   
     margin-bottom: 2%;
+    color: aliceblue;
 }
 
 h5{
     font-size: 1em;
     text-shadow: 2px 2px 10px blueviolet;
+    color: aliceblue;
 }
 
 
@@ -41,12 +41,12 @@ body{ display:flex; flex-direction:column; }
 
 
 body{
-    background-color: #9B9DBD;
     background-size: cover;
     max-width: 100%;
     margin: 0 10px 0 10px;
     /* doesn't allow the horizontal scroll bar to appear */
     overflow-x:hidden;
+   
     
 }
 
@@ -98,6 +98,7 @@ body nav{
     margin: auto;
     margin-top: 3%;
     transition: 1;
+  
 }
 
 /* Copy to media for responsive padding */
@@ -109,6 +110,7 @@ nav h2{
     border-radius: 33px;
     -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
     box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
+    text-shadow: 2px 2px 10px blue;
 }
 
 
@@ -121,6 +123,7 @@ body .content-box_about-me{
     width: 60%;
     margin: auto;
     text-align: center;
+    text-shadow: 2px 2px 10px blue;
 }
 
 .content-box_about-me article li{
@@ -131,6 +134,7 @@ body .content-box{
     display: flex;
     justify-content: center;
     margin-top: 2%;
+    text-shadow: 2px 2px 10px blue;
 }
 
 body header:hover{
@@ -168,6 +172,7 @@ header{
     justify-content: center;
     transition: transform 0.5s;
     max-width: 100%;
+   
 }
 
 header img{
@@ -183,7 +188,7 @@ header img{
     align-self: center;
     margin-left: 10px;
     font-size: 16px;
-
+    color: rgb(0, 0, 0);
 }
 
 h1 span{
@@ -192,8 +197,9 @@ h1 span{
 }
 
 article{
+    color: aliceblue;
     padding: 25px 40px;
-    background-color: rgb(240, 248, 255, 0.35);
+    background-color: #7e83d0;
     border-radius: 30px;
     margin-right: 15px;
     margin-top: 10px;
