info in education + changed article placement in about me

--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ article{
     -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
     box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
     font-size: 1.05em;
+    margin-bottom: 15px;
 }
 
 article img{
