--- a/style.css
+++ b/style.css
@@ -96,15 +96,17 @@ nav{
     justify-content: space-evenly;
     margin: auto;
     margin-top: 3%;
-    
 }
 
+nav h2 a img{
+    width: 30px;
+}
 
 /* Copy to media for responsive padding */
 nav h2{ 
     margin-right: 10px;
     margin-left: 10px;
-    padding: 2px 10px;
+    padding: 4px 10px;
     background-color: #E75A64;
     border-radius: 33px;
     -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
@@ -133,44 +135,13 @@ body .content-box_about-me{
 body .content-box{
     display: flex;
     justify-content: center;
-    margin-top: 2%;
-    text-shadow: 2px 2px 10px blue;
-}
-
-body header:hover{
-    transform: scale(1.1);
-}
-
-body .main-logo:hover{
-    transform: scale(1.1);
-}
-
-.main-logo{
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    margin-bottom: 2%;
-    transition: transform 0.5s;
-
-}
-.main-logo a{
-    display: inline;
     text-align: center;
-    margin: auto;
-}
-
-.main-logo img{
-    width: 10%;
-    margin-top: 2%;
-    border-radius: 50px;
-    -webkit-box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45); 
-    box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45);
+    text-shadow: 2px 2px 10px blue;
 }
 
 header{
     display: flex;
     justify-content: center;
-    transition: transform 0.5s;
     max-width: 100%;
    
 }
@@ -183,18 +154,18 @@ header img{
     box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45);
 }
 
-
 .Welcome{
     align-self: center;
     margin-left: 10px;
     font-size: 16px;
     color: rgb(0, 0, 0);
 }
-
-h1 span{
-   font-size:  1.2em;
-   font-style: italic;
+.Welcome span{
+    color: #E75A64;
+    font-size:  1.2em;
+    font-style: italic;
 }
+
 
 article{
     color: aliceblue;
