--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Playfair Display', serif;
-    letter-spacing: .1rem;
-    min-width: 0; 
+    letter-spacing: .1rem; 
 }
 
 a{
@@ -61,10 +60,6 @@ body{
     margin-top: 2%;
     }
 
-    body .content-box_about-me{
-        width: 100%;
-    }
-    
     .icons-box{
         display: flex;
         flex-flow: column;
@@ -117,11 +112,6 @@ body{
        
     }
 
-    
-    body .content-box_about-me{
-        width: 90%;
-    }
-
     header img{
         display: inline;
         margin: auto;
@@ -141,13 +131,13 @@ body{
     }
     
     
-    body .content-box, .content-box_about-me{
+    body .content-box{
     display: flex;
     flex-flow: column;
     margin-top: 2%;
     }
     
-}
+} /* end of media query*/
 
 nav{
     display: flex;
@@ -183,10 +173,11 @@ nav h2:hover{
 body .content-box_about-me{
     display: flex;
     flex-flow: column;
-    flex-wrap: wrap;
     margin: auto;
     text-align: center;
     text-shadow: 2px 2px 10px blue;
+    width: 90%;
+    max-width: 620px;
 }
 
 .content-box_about-me article li{
@@ -233,12 +224,14 @@ article{
     padding: 25px 40px;
     background-color: #7e83d0;
     border-radius: 30px;
-    margin-right: 15px;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-top: 10px;
     -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
     box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
     font-size: 1.05em;
     margin-bottom: 15px;
+    
 }
 
 article img{
