--- a/style.css
+++ b/style.css
@@ -1,255 +1,182 @@
-*{
+body{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
-    font-family: 'Playfair Display', serif;
-    letter-spacing: .1rem;
+    font-family: 'Nanum Myeongjo', serif;
+    font-weight: 400;
+    font-size: 1.125rem;
+    color: #434343;
+}
+
+img{
+    width: 100%;
+    max-width: 100px;
+}
+
+/*******************
+    Typography
+*******************/
+
+h1,h3,h4{
+    font-size: 1.5rem;
+    font-family: 'Nanum Myeongjo', serif;
+    font-weight: 700;
+}
+
+h1{
+    font-weight: 800;
+    font-size: 2rem;
 }
 
 a{
     text-decoration: none;
-    color: aliceblue;
+    color: #434343;
 }
 
-h2,h3{
-    text-align: center;   
-    margin-bottom: 2%;
-    color: aliceblue;
+.header-title p, 
+.article-subtitle{
+    font-weight: 700;
 }
 
-h5{
-    font-size: 1em;
-    text-shadow: 2px 2px 10px #E75A64;
-    color: aliceblue;
+span{
+    color:  #E75A64;
+    font-weight: 800;
 }
 
+/*******************
+    Layout
+*******************/
 
-/* Making the footer stick to the bottom of the page */
-/* The article fills all the space between header & footer */
-body{ min-height: 100vh; margin:0; }
-
-header{ min-height:50px; }
-footer{ min-height:50px; }
-
-body{ display:flex; flex-direction:column; }
-
-.content-box, .content-box_about-me{
-    flex: 1;
-}
-/* used stackoverflow solution */
-
-
-
-body{
-    background-size: cover;
-    max-width: 100%;
-    margin: 0 10px 0 10px;
-    /* doesn't allow the horizontal scroll bar to appear */
-    overflow-x:hidden;
-      
-}
-
-@media only screen and (max-width: 600px){
-    body .content-box{
-    display: flex;
-    flex-flow: column;
-    margin-top: 2%;
-    }
-
-    .icons-box{
-        display: flex;
-        flex-flow: column;
-        justify-content: center; 
-       
-    }
-
-    article img{
-        height: 35%;
-        width: 20%;
-        margin-top: 15px;   
-    }
-
-    header{
-        display: flex;
-        flex-flow: column;
-        text-align: center;
-        justify-content: center;
-        max-width: 100%;
-    }
-
-    header img{
-        display: inline;
-        margin: auto;
-        margin-top: 2%;
-        border-radius: 50px;
-        -webkit-box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45); 
-        box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45);
-    }
-
-    nav{
-        display: flex;
-        flex-flow: column;
-        width: 60%;
-        justify-content: space-evenly;
-        margin: auto;
-        margin-top: 3%;
-    }
-    
-}
-
-@media only screen and (max-width: 950px){
-
-    header{
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        flex-flow: column;
-        max-width: 100%;
-       
-    }
-
-    header img{
-        display: inline;
-        margin: auto;
-        margin-top: 2%;
-        border-radius: 50px;
-        -webkit-box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45); 
-        box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45);
-    }
-
-    nav{
-        display: flex;
-        flex-flow: column;
-        width: 60%;
-        justify-content: space-evenly;
-        margin: auto;
-        margin-top: 3%;
-    }
-    
-    
-    body .content-box{
-    display: flex;
-    flex-flow: column;
-    margin-top: 2%;
-    }
-    
-}
-
-nav{
-    display: flex;
-    width: 60%;
-    justify-content: space-evenly;
-    margin: auto;
-    margin-top: 3%;
-}
-
-nav h2 a img{
-    width: 30px;
-}
-
-/* Copy to media for responsive padding */
-nav h2{ 
-    margin-right: 10px;
-    margin-left: 10px;
-    padding: 4px 10px;
-    background-color: #E75A64;
-    border-radius: 33px;
-    -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
-    box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
-    text-shadow: 2px 2px 10px blue;
-    transition: 0.5s;
-}
-
-
-nav h2:hover{
-    transform: scale(1.1);
-}
-
-
-body .content-box_about-me{
-    width: 60%;
-    margin: auto;
+.container{
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto; /*centering the container*/
     text-align: center;
-    text-shadow: 2px 2px 10px blue;
 }
 
-.content-box_about-me article li{
-    margin-top: 10px;
-}
-
-body .content-box{
+.container-flex{
     display: flex;
-    justify-content: center;
-    text-align: center;
-    text-shadow: 2px 2px 10px blue;
+    flex-direction: column;
 }
 
 header{
+    margin-top: 1.5em;
+}
+
+.header-image{
+    margin: 0 auto; /*centering the picture*/
+    border-radius: 80px;
+}
+
+/* navigation */
+nav a{
+    padding: .5em 1em; 
+    color: white;
+    background: #E75A64;
+    border-radius: 90px;
+}
+
+nav li{
+    margin: 1em auto; /*space for mobile*/
+    transition: .5s;
+}
+
+nav li:hover{
+    transform: scale(1.1);
+}
+
+nav ul{
+    list-style: none;
+    padding: 0; /*get rids of extra space on the side*/
     display: flex;
-    justify-content: center;
-    max-width: 100%;
-   
+    flex-direction: column;
+    margin-top: 2em;
 }
 
-header img{
-    width: 8%;
-    margin-top: 2%;
-    border-radius: 50px;
-    -webkit-box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45); 
-    box-shadow: -4px 7px 24px 5px rgba(82,52,175,0.45);
-}
-
-.Welcome{
-    align-self: center;
-    margin-left: 10px;
-    font-size: 16px;
-    color: rgb(0, 0, 0);
-}
-.Welcome span{
-    color: #E75A64;
-    font-size:  1.2em;
-    font-style: italic;
-}
-
+/* article */
 
 article{
-    color: aliceblue;
-    padding: 25px 40px;
-    background-color: #7e83d0;
-    border-radius: 30px;
-    margin-right: 15px;
-    margin-top: 10px;
-    -webkit-box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.45); 
-    box-shadow: -2px 7px 24px -1px rgba(82,52,175,0.);
-    font-size: 1.05em;
-    margin-bottom: 15px;
+   padding: .5em 0;
+   border: 10px solid  #7e83d0;
+   border-radius: 90px;
+   margin-top: 1.5em;
 }
 
-article img{
-    width: 80px;
-    margin: auto; 
-    margin-top: 15px; 
+.article-link:hover{
+    color: #a0a5f2;
 }
 
-.icons-box{
-    display: flex;
-   justify-content: center;
+aside{
+    margin-bottom: 4em;
 }
 
-hr{
-    margin-top: 5%;
+.title-border{
+    width: fit-content;
+    margin: auto;
+    padding: .5em 0;
+    border-bottom: 1px solid #434343;
 }
+
+.article-list,
+.article-sublist{
+    max-width: 200px;
+    margin: 0 auto; /*centering the list*/
+}
+
+.article-list-item{
+    padding: 0.5em 0; /*space for mobile*/
+}
+
+.article-content{
+    margin: 1em 1em;
+
+}
+
+/* footer */
+
 footer{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-around;
+    text-align: center;
+    background: #a0a5f2;
+    padding: 1.5em 0;
 }
 
-footer img{
-    height: 40px;
+.contact-info{
+    color: white;
+    margin-bottom: 2em;
 }
 
-footer img:hover{
-    opacity: 0.6;
+.contact-info-email{
+    font-weight: 700;
+    letter-spacing: .1em;
+}
+
+/* desktop media query 
+    from width of 635px to BIGGER
+*/
+@media (min-width:635px){
+
+    .nav-list-item{
+        margin-left: 15px;
+        margin-right: 15px;
+        max-width: 300px;
+    }
+
+    nav ul{
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .container-flex{
+        flex-direction: row;
+        margin-bottom: 4em;
+    }
+
+    main{
+        width: 65%;
+    }
+
+    aside{
+        width: 35%;
+        min-width: 225px;
+        margin-left: 10px;
+    }
 }
