--- a/style.css
+++ b/style.css
@@ -132,7 +132,15 @@ article{
    padding: .5em 2em;
    border: 10px solid  #7e83d0;
    border-radius: 90px;
-   margin-top: 1.5em; /*spacing between articles*/
+   margin-bottom: 16em; /*spacing between articles*/
+}
+
+.article-first{
+    margin-top: 8rem;
+}
+
+.article-last{
+    margin-bottom: 0;
 }
 
 .article-link:hover{
@@ -176,10 +184,11 @@ footer{
     opacity: .75;
 }
 
+
 /* desktop media query 
-   (min-width) from width of 825px to BIGGER (deleted)
+   (min-width) from width of 880px to BIGGER (deleted)
 */
-@media (min-width: 825px){
+@media (min-width: 880px){
 
     .container-flex{
         flex-direction: row;
@@ -197,5 +206,44 @@ footer{
     .header-image{
        margin: 0 .5em;
     }
+
+    
+
+    /* Progress Bar Feature for Big Screens*/
+
+    .progress-section{
+
+        position: fixed;
+        right: 50px;
+        top: 30%;
+        height: 20%;
+        width: 60px;
+        display: flex;
+        justify-content: space-between;
+        will-change: transform; /*optimizing the browser for transformation*/
+        transition: .03s ease-out;
+    }
+
+    .progress-bar-wrap{
+        position: relative;
+        width: 5px;
+        border: 1px solid black;
+        border-radius: 10px;
+        overflow: hidden;
+        background-color: rgb(70,70,70);
+    }
+
+    .progress-bar{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 0%;
+        background-color: #abaff0;
+    }
+
+    body::-webkit-scrollbar{
+        display: none; /*removing the scroll bar*/
+    }
+
 
 }
