--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@ article{
    margin-bottom: 16em; /*spacing between articles*/
 }
 
+.article-icons img{
+    margin-top: 1.2rem;
+}
+
 .content-container{
     display: inline-block;
 }
@@ -165,7 +169,9 @@ article{
 
 }
 
-
+.click-icon{
+    width: 2.5rem;
+}
 /* icons JavaScript manupilation*/
 
 .content-container{
@@ -183,11 +189,12 @@ article{
 
 .active{
     transform: scale(1.6);
-    padding: 2px;
+    padding: 4px 5px;
     background-color: #fff;
     border: 1px solid black;
     border-radius: 15px;
 }
+
 
 
 /* footer */
@@ -268,7 +275,7 @@ footer{
         top: 0;
         width: 100%;
         height: 0%;
-        background-color: #abaff0;
+        background-color: #E75A64;;
     }
 
     
