--- a/hangman-project/style.css
+++ b/hangman-project/style.css
@@ -6,6 +6,16 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-y: hidden;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .word-container{
     margin: 10px auto;
     width: 80%;
