--- a/hangman-project/style.css
+++ b/hangman-project/style.css
@@ -6,24 +6,15 @@
     box-sizing: border-box;
 }
 
-body{
-    overflow-y: hidden;
-}
-
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .word-container{
     margin: 10px auto;
     width: 80%;
-    height: 40px;
     max-width: 500px;
     display: flex;
     justify-content: center;
     text-align: center;
+    border: 1px solid magenta;
 }
 
 .button-container{
@@ -45,18 +36,17 @@ body{
    width: 80%;
    max-width: 800px;
    flex-wrap: wrap; 
-   margin: 40px auto;
    display: flex;
    justify-content: center;
-   text-align: center;
-
+   border: 1px solid magenta;
+   margin: 40px auto;
 }
 
 .alphabet-letter{
     width: 5%;
     font-size: 1.5rem;
     padding: 6px;
-    margin: 4px 6px;
+    margin: 4px;
     border-radius: 10px;
     cursor: pointer;
     transition: 0.4s;
@@ -86,9 +76,9 @@ body{
 
 /*Hangman display*/
 .hangman-container{
-    width: 20%;
+    width: 40%;
     max-width: 600px;
-    height: 110px;
+    height: 160px;
     margin: 10px auto;
     padding: 4px;
 
@@ -241,4 +231,23 @@ body{
     border-radius: 20px;
     background-color: white;
     color: white;
+}
+
+@media (max-width: 900px){
+
+    .alphabet-letter{
+        width: 14%;
+        font-size: 1.2rem;
+    }
+
+    .word-container{
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+    }
+
+    .container{
+        width: 90%;
+        margin: auto;
+        overflow-x: hidden;
+    }
 }
