--- a/style.css
+++ b/style.css
@@ -223,7 +223,18 @@ footer{
 .progress-num{
     color: white;
 }
-   
+
+/*Animation on scroll*/
+.hidden{
+    opacity: 0;
+    transition: all 1.5s;
+    transform: translateX(-100%);
+}
+
+.show{
+    opacity: 1;
+    transform: translateX(0);
+}
 
 /* desktop media query 
    (min-width) from width of 870px to BIGGER (deleted)
