--- a/style.css
+++ b/style.css
@@ -134,6 +134,11 @@ article{
    margin-bottom: 16em; /*spacing between articles*/
 }
 
+.article-border{
+    border: 10px solid  #7e83d0;
+    border-radius: 30px;
+}
+
 .article-icons img{
     margin-top: 1.2rem;
 }
@@ -217,17 +222,24 @@ article{
 .buttons-container, .buttons-slide-container{
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
-    cursor: pointer;
-    
+    justify-content: space-around;    
 }
 .fa-caret-left, .fa-caret-right{
     padding: 10px;
 }
 
 #right-btn, #left-btn{
-    border: 1px solid rgb(40, 40, 40) ;
+    border: 1px solid  #e75a64 ;
+    background-color: white;
     border-radius: 50%;
+    transition: 0.6s;
+    color: #e75a64 ;
+}
+
+#right-btn:hover, #left-btn:hover{
+    cursor: pointer;
+    background-color: rgba(225, 85, 85, 0.75);
+    color: white;
 }
 
 .buttons-slide-container{
@@ -249,6 +261,7 @@ article{
 }
 /* icons JavaScript manupilation*/
 .content-container{
+
     cursor: pointer;
     transition: .5s;
 }
