--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     font-weight: 400;
     font-size: 1.125rem;
     color: #434343;
+    overflow-x: hidden;
 }
 
 .article-icons .content-container img, .container-flex-header img{
@@ -139,6 +140,7 @@ article{
     border-radius: 30px;
 }
 
+
 .article-icons img{
     margin-top: 1.2rem;
 }
@@ -168,120 +170,78 @@ article{
     width: 2.5rem;
 }
 
-.article-projects, .article-coding{
-    position: relative;
-    
-}
-.slide-elements-container{
-    position: relative;
-    height: 420px;
-}
-
-.article-content-secondary img{
-    width: 100%;
-    min-width: 92px;
-    min-height: 200px;
-    object-fit: cover;
-
-}
 
 .article-slide-element{
+    margin: auto;
     max-width: 460px;
-    height: 200px;
-    align-items: center;
     margin-top: 40px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     padding: 2rem;
     margin-bottom: 20px;
     border: 10px solid  #7e83d0;
     border-radius: 30px;
-    text-align: start;
+    text-align: center;
     background-color: white;
-    
-    position: absolute;
-    transition: transform 0.4s;
-
-    /*centering absolutely positioned div*/
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto;
-
-
 }
 
-.article-slide-element[data-status="active"]{
-    z-index: 1;
-}
-.article-slide-element[data-status="after"]{
-    z-index: 0;
-    transform: translateX(74%) translateY(20%);
+
+.article-content-secondary{
+    display: none;
 }
 
-.article-slide-element[data-status="before"]{
-    transform: translateX(-74%) translateY(20%);
-    z-index: 0;
-}
-
-.article-slide-element[data-status="unknown"]{
-    transform: scale(0);
-    z-index: 0;
-}
-
-.article-education{
-    margin-top: 40px;
-    clear: both;
-}
-
-.buttons-container, .buttons-slide-container{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;    
-}
-.fa-caret-left, .fa-caret-right{
-    padding: 10px;
-}
-
-#right-btn, #left-btn{
-    border: 1px solid  #e75a64 ;
-    background-color: white;
-    border-radius: 50%;
-    transition: 0.6s;
-    color: #e75a64 ;
-}
-
-#right-btn:hover, #left-btn:hover{
-    cursor: pointer;
-    background-color: rgba(225, 85, 85, 0.75);
-    color: white;
+.article-content-primary{
+    order: 1;
 }
 
 .buttons-slide-container{
     margin-top: 20px;
 }
 
-.article-content-primary{
-    width: 76%;
-    order: 2;
-    font-size: 0.8rem;
-}
-
-.article-content-primary h3{
-    margin-top: 0;
-}
-
 .project-article-title{
+    margin-top: 0;
     font-size: 1.3rem;
     font-weight: bolder;
 }
 
-.article-content-secondary{
-    width: 20%;
-    order: 1;
+/****************
+    Buttons
+*****************/
+
+.buttons-container{
+    display:flex;
+    flex-direction: column;
+
 }
+
+.buttons-container{
+    margin-top: 40px;
+
+}
+
+.buttons-slide-container{
+    display:none;
+}
+
+#read-more, #visit-project{
+    border: 1px solid #E75A64;
+    border-radius: 30px;
+    background-color: #E75A64;
+    padding: 6px 12px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    width: 160px;
+}
+
+#read-more a, #visit-project a{
+    color: white;
+    font-size: 0.9;
+    font-weight: 700;
+}
+
+
 /* icons JavaScript manupilation*/
+/*
 .content-container{
 
     cursor: pointer;
@@ -303,7 +263,7 @@ article{
     border: 1px solid black;
     border-radius: 15px;
 }
-
+*/
 
 
 /* footer */
@@ -347,6 +307,7 @@ footer{
 
 /* desktop media query 
    (min-width) from width of 870px to BIGGER (deleted)
+
 */
 @media (min-width: 870px){
 
@@ -370,11 +331,10 @@ footer{
      /* Progress Bar */
 
      .progress-section{
-
         position: fixed;
-        right: 20px;
-        top: 25%;
-        height: 20%;
+        right: 0;
+        top: 0;
+        height: 100%;
         width: 56px;
         display: flex;
         justify-content: space-between;
@@ -383,9 +343,8 @@ footer{
 
     .progress-bar-wrap{
         position: relative;
-        width: 5px;
-        border: 1px solid black;
-        border-radius: 10px;
+        width: 10px;
+
         overflow: hidden;
         background-color: rgb(70,70,70);
     }
@@ -395,18 +354,124 @@ footer{
         top: 0;
         width: 100%;
         height: 0%;
-        background-color: #E75A64;;
+        background-color: #E75A64;
     }
 
     
-    .progress-num{
-    color: #464646;
-    }
+   
    
 
     body::-webkit-scrollbar{
         display: none; /*removing the scroll bar*/
     }
 
+    /*********************
+    Article Projects Slide Style
+    *********************/
+
+    .article-projects{
+        position: relative;
+        
+    }
+
+    .slide-elements-container{
+        position: relative;
+        height: 420px;
+    }
+
+    .article-slide-element{
+        width: 80%;
+        max-width: 460px;
+        height: 200px;
+        text-align: start;
+        position: absolute;
+        flex-direction: row;
+        justify-content: space-between;
+        
+        transition: transform 0.4s;
+
+        /*centering absolutely positioned div*/
+        left: 0; 
+        right: 0; 
+        margin-left: auto; 
+        margin-right: auto;
+    }
+
+    .article-content-secondary{
+        display: inline-block;
+        width: 20%;
+        order: 1;
+    }
+
+    .article-content-primary{
+        width: 76%;
+        order: 2;
+        font-size: 0.8rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .article-content-secondary img{
+        min-width: 92px;
+        min-height: 200px;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 30px;
+    }
+    
+    .article-slide-element[data-status="active"]{
+        z-index: 1;
+    }
+    .article-slide-element[data-status="after"]{
+        z-index: 0;
+        transform: translateX(74%) translateY(20%);
+    }
+    
+    .article-slide-element[data-status="before"]{
+        transform: translateX(-74%) translateY(20%);
+        z-index: 0;
+    }
+    
+    .article-slide-element[data-status="unknown"]{
+        transform: scale(0);
+        z-index: 0;
+    }
+    
+    .article-education{
+        margin-top: 40px;
+        clear: both;
+    }
+    
+    /*Buttons*/
+    .buttons-slide-container{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around; 
+
+    }
+
+    .buttons-container{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .fa-caret-left, .fa-caret-right{
+        padding: 10px;
+    }
+    
+    #right-btn, #left-btn{
+        border: 1px solid  #e75a64 ;
+        background-color: white;
+        border-radius: 50%;
+        transition: 0.6s;
+        color: #e75a64 ;
+    }
+    
+    #right-btn:hover, #left-btn:hover{
+        cursor: pointer;
+        background-color: rgba(225, 85, 85, 0.75);
+        color: white;
+    }
 
 }
